--- a/IDS/appsettings.json
+++ b/IDS/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultSQLConnection": "Server=LAPTOP-ST7ICV27;Database=ActClub;Trusted_Connection=True;TrustServerCertificate=true;"
+  },
+  "ApiSettings": {
+    "Secret": "Test 21323 tsadfas trasd fsadfaw teasf "
+  }
 }
