--- a/IDS/appsettings.json
+++ b/IDS/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultSQLConnection": "Server=LAPTOP-ST7ICV27;Database=ActClub;Trusted_Connection=True;TrustServerCertificate=true;"
+    "DefaultSQLConnection": "Server=.;Database=ActClub;Trusted_Connection=True;TrustServerCertificate=true;"
   },
   "ApiSettings": {
     "Secret": "Test 21323 tsadfas trasd fsadfaw teasf "
